test/fail/parse_fn_call_missing_parens.ms
val result := writeln "hello world";
